Revert "Fix Linux Firefox font alignment"
This reverts commit a7ea28df7cb957c18bdc2ea09300c72f8a180770.

--- a/src/themes/Svingle/DonationForm/SubComponents/SelectGroupRadios.scss
+++ b/src/themes/Svingle/DonationForm/SubComponents/SelectGroupRadios.scss
@@ -10,6 +10,14 @@ $font-size: 0.95em !default;
 			margin-top: 3px;
 			cursor: pointer;
 			height: 25px;
+
+			@include breakpoints.medium-up {
+				height: 29px;
+			}
+
+			@include breakpoints.large-up {
+				height: 25px;
+			}
 		}
 
 		&-label {
